adding validation for updating routes
