# routes/routes_set.js
@@ -1,8 +1,7 @@
 require('dotenv').config();
 const express = require('express');
 const router = express.Router();
-const { check, validationResult } = require('express-validator')
-const { userValidationRules, validate } = require('../validator');
+const validate = require('../validator');
 
 const contactCon = require('../controller/routes_set')
 // GET /feed/posts
@@ -10,11 +9,11 @@ router.get('/', contactCon.getAllRoutes);
 
 router.get('/:id', contactCon.getOneRoute);
 
-router.get('/login', contactCon.getLogin);
+// router.get('/login', contactCon.getLogin);
 
-router.put('/update/:id', contactCon.updateRoute);
+router.put('/update/:id', validate.updateRouteValidationRules, validate.handleValidationErrors, contactCon.updateRoute);
 
-router.post('/', contactCon.createRoute);
+router.post('/',  contactCon.createRoute);
 
 router.delete('/:id', contactCon.deleteRoute);
 
