# routes/user.js
@@ -1,8 +1,7 @@
 require('dotenv').config();
 const express = require('express');
 const router = express.Router();
-const { check, validationResult } = require('express-validator')
-const { userValidationRules, validate } = require('../validator');
+const validate = require('../validator');
 
 const contactCon = require('../controller/user')
 // GET /feed/posts
@@ -10,11 +9,9 @@ router.get('/', contactCon.getAllUsers);
 
 router.get('/:id', contactCon.getOneUser);
 
-router.get('/login', contactCon.getLogin);
-
-router.put('/update/:id', contactCon.updateUser);
-
-router.post('/', contactCon.createUser);
+router.put('/update/:id', validate.updateUserValidationRules, validate.handleValidationErrors, contactCon.updateUser);
+// userValidationRules(), validate,
+router.post('/',  contactCon.createUser);
 
 router.delete('/:id', contactCon.deleteUser);
 
