# swagger.json
@@ -136,6 +136,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -227,16 +230,6 @@
         }
       }
     },
-    "/routes/login": {
-      "get": {
-        "description": "",
-        "responses": {
-          "204": {
-            "description": "No Content"
-          }
-        }
-      }
-    },
     "/routes/update/{id}": {
       "put": {
         "description": "",
@@ -275,6 +268,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -366,16 +362,6 @@
         }
       }
     },
-    "/user/login": {
-      "get": {
-        "description": "",
-        "responses": {
-          "204": {
-            "description": "No Content"
-          }
-        }
-      }
-    },
     "/user/update/{id}": {
       "put": {
         "description": "",
@@ -414,6 +400,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -543,6 +532,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
